fix: adjust blockquote and list spacings

--- a/assets/css/blog-post.css
+++ b/assets/css/blog-post.css
@@ -41,7 +41,13 @@
 }
 
 .post-content ol, .post-content ul{
-    padding: 16px;
+    margin: 30px 0;
+    padding-left: 20px;
+    font-size: 20px;
+}
+
+.post-content ol li:not(:last-child), .post-content ul li:not(:last-child){
+    margin-bottom: 16px;
 }
 
 .post-content h6, p{
@@ -56,7 +62,7 @@
     margin-bottom: 50px;
 }
 
-.post-content p {
+.post-content > p {
     padding-top: 40px;
 }
 
@@ -64,7 +70,6 @@
     font-size: inherit;
     font-family: inherit;
     text-decoration: none;
-    line-height: 1.67;
     color: #ff0090;
 }
 
@@ -73,7 +78,9 @@
 }
 
 .post-content em {
-    font-weight: normal;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
     font-style: italic;
 }
 
@@ -96,6 +103,18 @@
     display: block;
     margin: 20px auto 0 auto;
     max-width: 100%;
+}
+
+blockquote {
+    background-color: #f0d8ef;
+    border-left: 8px #e89ed7 solid;
+    padding-left: 16px;
+}
+
+blockquote > p {
+    padding-top: 0;
+    padding: 6px 0;
+    height: 100%;
 }
 
 .language-plaintext {
